--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,6 +11,12 @@
     padding: 25px;
   }
 
+  .logo{
+    width: 60px;
+    height: auto;
+   
+  }
+
   .options {
     width: 50%;
     height: 100%;
@@ -20,6 +26,7 @@
 
     .option {
       padding: 10px 15px;
+      cursor: pointer;
     }
   }
 }
