implemented firebase utils, included ability to store authenticated users into our firestore database

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
 body {
   margin: 0;
-  font-family: -apple-system,'Roboto', 'Cantarell', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', 'Cantarell', 'Droid Sans', 'Helvetica Neue', sans-serif;
 }
