--- a/src/components/Custom-button-component/Custom-button.scss
+++ b/src/components/Custom-button-component/Custom-button.scss
@@ -13,6 +13,8 @@
   font-weight:bold;
   border: none;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
 
   &:hover {
     background-color: white;
@@ -26,6 +28,19 @@
 
     &:hover{
       background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted{
+    background-color: white;
+    color: black;
+    border: 1px solid rgb(7, 7, 7);
+
+
+    &:hover{
+      background-color: black;
+      color: whitesmoke;
       border: none;
     }
   }
