--- a/src/components/Cart-Dropdwn-Component/Cart-Dropdown.scss
+++ b/src/components/Cart-Dropdwn-Component/Cart-Dropdown.scss
@@ -1,15 +1,20 @@
 .cart-dropdown {
   position: absolute;
-  width: 235px;
-  height: 340px;
+  width: 250px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   padding: 20px;
   border: 1px solid grey;
   background-color: white;
-  top: 90px;
-  right: 40px;
+  top: 80px;
+  right: 0;
   z-index: 5;
+
+  .empty-message{
+    font-size: 15px;
+    margin: 50px auto;
+  }
 
   .cart-items {
     height: 240px;
